1. Добавлены length (h, hh, l, ll, L)
2. Пофикшен отрицательный double