@@ -8,6 +8,30 @@ int		convert_char2string(t_format *format, int a)
 	return (1);
 }
 
+char    *ft_itoa_base_2(long long int int2convert, size_t base)
+{
+    char    *str1;
+    char    *str2;
+    size_t	i;
+    size_t  k;
+    char	values[16] = "0123456789abcdef";
+    
+    i = int_length(int2convert, 10);
+    if (!(str1 = ft_strnew(i)) || !(str2 = ft_strnew(i)))
+        return (NULL);
+    k = 0;
+    while (int2convert)
+    {
+        str1[k++] = values[int2convert % base];
+        int2convert = int2convert / base;
+    }
+    i = 0;
+    str2[k] = '\0';
+    while (k > 0)
+        str2[i++] = str1[--k];
+    return (str2);
+}
+
 int     convert_int2string(t_format *format, long long int a, size_t base)
 {
 	unsigned long long int  b;
@@ -19,7 +43,7 @@ int     convert_int2string(t_format *format, long long int a, size_t base)
 	}
 	else
 		b = a;
-	if (!(format->content.string2show = ft_itoa_base(b, base)))
+	if (!(format->content.string2show = ft_itoa_base_2(b, base)))
 		return (0);
 	return (1);
 }
@@ -35,7 +59,7 @@ int     convert_short2string(t_format *format, short a, size_t base)
 	}
 	else
 		b = a;
-	if (!(format->content.string2show = ft_itoa_base(b, base)))
+	if (!(format->content.string2show = ft_itoa_base_2(b, base)))
 		return (0);
 	return (1);
 }
@@ -63,12 +87,12 @@ int		convert_float2string(t_format *format, double a)
 	decimal = get_decimal(format->precision, a - integer, &integer);
 	if (format->precision)
 	{
-		if (!(format->content.string2show = ft_itoa_base(decimal, 10)))
+		if (!(format->content.string2show = ft_itoa_base_2(decimal, 10)))
 			return (0);
 		if (!apply_precision_float(format))
 			return (0);
 	}
-	if (!(format->content.string2show = join_strings(ft_itoa_base(integer, 10), format->content.string2show, format)))
+	if (!(format->content.string2show = join_strings(ft_itoa_base_2(integer, 10), format->content.string2show, format)))
 		return (0);
 	return (1);
 }
@@ -139,12 +163,12 @@ int		convert_float2string(t_format *format, double a)
 		decimal = get_decimal(format->precision, a - integer, &integer);
 	if (format->precision)
 	{
-		if (!(format->content.string2show = ft_itoa_base(decimal, 10)))
+		if (!(format->content.string2show = ft_itoa_base_2(decimal, 10)))
 			return (0);
 		if (!apply_precision_float(format))
 			return (0);
 	}
-	if (!(format->content.string2show = join_strings(ft_itoa_base(integer, 10), format->content.string2show, format)))
+	if (!(format->content.string2show = join_strings(ft_itoa_base_2(integer, 10), format->content.string2show, format)))
 		return (0);
 	return (1);
 }
@@ -171,9 +195,9 @@ int     convert2string(t_format *format, va_list ap)
 	else if (format->type == 'd' || format->type == 'i')
 		res = convert_int2string(format, va_arg(ap, int), 10);
 	else if (format->type == 'x' || format->type == 'X')
-		res = convert_int2string(format, va_arg(ap, unsigned int), 16);
+		res = convert_int2string(format, va_arg(ap, long long int), 16);
 	else if (format->type == 'o')
-		res = convert_int2string(format, va_arg(ap, unsigned int), 8);
+		res = convert_int2string(format, va_arg(ap, long long int), 8);
 	else if (format->type == 'u')
 		res = convert_int2string(format, va_arg(ap, unsigned int), 10);
 	else if (format->type == 'f')
