@@ -1,2 +1,3 @@
 1. Добавлены length (h, hh, l, ll, L)
 2. Пофикшен отрицательный double
+3. Подредактировал функцию ft_itoa_base. Была ошибочка. Новая версия именована ft_itoa_base_2 и пока лежит в файле get_unformatted_string.c
